--- a/io-programming-practice/gcr-codebase/json/pom.xml
+++ b/io-programming-practice/gcr-codebase/json/pom.xml
@@ -27,5 +27,11 @@
       <version>20250517</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.20.1</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
